tests/baselines/reference/exportDefaultInterfaceAndTwoFunctions.errors.txt
tests/cases/compiler/exportDefaultInterfaceAndTwoFunctions.ts(1,26): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/compiler/exportDefaultInterfaceAndTwoFunctions.ts(2,1): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/compiler/exportDefaultInterfaceAndTwoFunctions.ts(2,1): error TS2393: Duplicate function implementation.
tests/cases/compiler/exportDefaultInterfaceAndTwoFunctions.ts(3,1): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/compiler/exportDefaultInterfaceAndTwoFunctions.ts(3,1): error TS2393: Duplicate function implementation.


==== tests/cases/compiler/exportDefaultInterfaceAndTwoFunctions.ts (5 errors) ====
    export default interface A { a: string; }
                             ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    export default function() { return 1; }
    ~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    ~~~~~~
!!! error TS2393: Duplicate function implementation.
    export default function() { return 2; }
    ~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    ~~~~~~
!!! error TS2393: Duplicate function implementation.
    